- Issue #10203: sqlite3.Row now truly supports sequence protocol.  In particulr
  it supports reverse() and negative indices.  Original patch by Claudiu Popa.

- Issue #8743: Fix interoperability between set objects and the
  collections.Set() abstract base class.

- Issue #21481:  Argparse equality and inequality tests now return 
  NotImplemented when comparing to an unknown type.

Tests
-----

- Issue #21493: Added test for ntpath.expanduser().  Original patch by
  Claudiu Popa.

- Issue #19925: Added tests for the spwd module. Original patch by Vajrasky Kok.

- Issue #13355: random.triangular() no longer fails with a ZeroDivisionError
  when low equals high.

- Issue #21522: Added Tkinter tests for Listbox.itemconfigure(),
  PanedWindow.paneconfigure(), and Menu.entryconfigure().

- Issue #20635: Added tests for Tk geometry managers.

What's New in Python 2.7.7
==========================

*Release date: 2014-05-31*

Build
-----

- Issue #21462: Build the Windows installers with OpenSSL 1.0.1g.

- Issue #19866: Include some test data in the Windows installers, so tests don't
  fail.


What's New in Python 2.7.7 release candidate 1?
===============================================

*Release date: 2014-05-17*

Core and Builtins
-----------------

- Issue #21350: Fix file.writelines() to accept arbitrary buffer objects,
  as advertised.  Patch by Brian Kearns.

- Issue #20437: Fixed 43 potential bugs when deleting objects references.

- Issue #21134: Fix segfault when str is called on an uninitialized
  UnicodeEncodeError, UnicodeDecodeError, or UnicodeTranslateError object.

- Issue #20494: Ensure that free()d memory arenas are really released on POSIX
  systems supporting anonymous memory mappings.  Patch by Charles-François
  Natali.

- Issue #17825: Cursor "^" is correctly positioned for SyntaxError and
  IndentationError.

- Raise a better error when non-unicode codecs are used for a file's coding
  cookie.
